--- a/VB/app.config
+++ b/VB/app.config
@@ -41,7 +41,7 @@
         <value></value>
       </setting>
       <setting name="DPIAwarenessMode" serializeAs="String">
-        <value>PerMonitorV2</value>
+        <value></value>
       </setting>
       <setting name="CustomPaletteCollection" serializeAs="Xml">
         <value/>
